--- a/css/interfaceStyles.css
+++ b/css/interfaceStyles.css
@@ -1,6 +1,10 @@
 /* Styles for interface app */
 
 /* Main page */
+#WebGL-output {
+    overflow: hidden;
+    margin: 0;
+}
 #buttonControls {
     position: absolute;
     top: 5%;
